--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body{
     display: flex;
     height: 100vh;
     width: 100vw;
+    margin: 0;
 }
 .first-section{
     background-color: white;
@@ -103,10 +104,9 @@ button.second{
 }
 .others{
     display: flex;
-    margin-right: 50px;
-    justify-content: space-between;
+    margin:30px auto;
     align-items: center;
-    margin-top: 30px;
+    justify-content: space-between;
 }
 .others p{
     vertical-align: middle;
@@ -156,8 +156,16 @@ img{
     margin-top: 20px;
 }
 hr{
-    max-width: 80%;
+    width: 100%;
     justify-content: left;
+}
+.haveAcc{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+.haveAcc a{
+    text-align: right;
 }
 /* for tablet */
 @media (max-width: 1040px){
